--- a/src/main/resources/fxml/Dashboard.fxml
+++ b/src/main/resources/fxml/Dashboard.fxml
@@ -8,10 +8,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<AnchorPane fx:id="rootPane" prefHeight="720.0" prefWidth="1280.0" styleClass="rootPane" stylesheets="@../css/Dashboard.css" xmlns="http://javafx.com/javafx/21.0.5" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.DashboardController">
+<AnchorPane fx:id="rootPane" prefHeight="720.0" prefWidth="1280.0" styleClass="rootPane" stylesheets="@../css/Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.DashboardController">
    <HBox fx:id="windowHeader" alignment="CENTER_RIGHT" layoutY="6.0" prefHeight="50.0" prefWidth="1281.0" spacing="25.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <padding>
          <Insets right="10.0" />
@@ -54,4 +55,5 @@
       </MFXButton>
    </VBox>
    <StackPane fx:id="contentPane" layoutX="278.0" layoutY="345.0" prefHeight="371.0" prefWidth="1001.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="266.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="51.0" />
+   <Line endX="1279.5" endY="52.0" startX="257.0" startY="52.0" stroke="#dddddd" />
 </AnchorPane>
