--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -10,8 +10,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-border-radius: 15;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.LoginController">
    <left>
@@ -74,6 +76,10 @@
                   <Font name="System Bold" size="12.0" />
                </font></MFXButton>
             <MFXPasswordField fx:id="passwordTxt" floatMode="BORDER" floatingText="Password" layoutX="114.0" layoutY="171.0" maxHeight="49.0" prefHeight="35.0" prefWidth="222.0" />
+            <HBox fx:id="loginHeader" alignment="TOP_RIGHT" layoutX="-232.0" layoutY="-1.0" prefHeight="30.0" prefWidth="600.0">
+               <children>
+                  <FontIcon fx:id="closeIcon" iconColor="RED" iconLiteral="fas-window-close" iconSize="20" />
+               </children></HBox>
          </children>
       </AnchorPane>
    </center>
