--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-border-radius: 15;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.LoginController">
+<BorderPane fx:id="loginBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-border-radius: 15;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.LoginController">
    <left>
       <AnchorPane prefHeight="407.0" prefWidth="228.0" style="-fx-background-color: #0C969C;" BorderPane.alignment="CENTER">
          <children>
@@ -39,7 +39,7 @@
             </Label>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="40.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../logo_qr.png" />
+                  <Image url="@../assets/logo_qr.png" />
                </image>
             </ImageView>
          </children>
@@ -80,6 +80,7 @@
                <children>
                   <FontIcon fx:id="closeIcon" iconColor="RED" iconLiteral="fas-window-close" iconSize="20" />
                </children></HBox>
+            <Label fx:id="loginMessageLabel" alignment="CENTER" layoutX="29.0" layoutY="216.0" prefHeight="23.0" prefWidth="307.0" textFill="RED" />
          </children>
       </AnchorPane>
    </center>
