--- a/src/main/resources/fxml/Dashboard.fxml
+++ b/src/main/resources/fxml/Dashboard.fxml
@@ -54,6 +54,6 @@
          </font>
       </MFXButton>
    </VBox>
-   <StackPane fx:id="contentPane" layoutX="278.0" layoutY="345.0" prefHeight="371.0" prefWidth="1001.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="266.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="51.0" />
-   <Line endX="1279.5" endY="52.0" startX="257.0" startY="52.0" stroke="#dddddd" />
+   <StackPane fx:id="contentPane" layoutX="262.0" layoutY="61.0" prefHeight="667.0" prefWidth="1026.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="262.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="61.0" />
+   <Line endX="1534.29296875" endY="51.0" startX="257.0" startY="52.0" stroke="#0c969c" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
 </AnchorPane>
