--- a/src/main/resources/fxml/Deparments.fxml
+++ b/src/main/resources/fxml/Deparments.fxml
@@ -18,37 +18,30 @@
   ~ along with MaterialFX.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import io.github.palexdev.materialfx.controls.MFXTableView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-
-<?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
-<GridPane alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="707.0" prefWidth="1095.0" styleClass="grid-pane" stylesheets="@../css/Common.css" vgap="10.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.DepartmentController">
-    <columnConstraints>
-        <ColumnConstraints halignment="CENTER" minWidth="10.0" />
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-    </rowConstraints>
-    <padding>
-        <Insets bottom="20.0" left="30.0" right="30.0" top="20.0" />
-    </padding>
-    <MFXTableView fx:id="table" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1011.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-    <HBox alignment="CENTER_RIGHT" prefHeight="43.0" prefWidth="992.0">
-        <children>
-            <MFXButton fx:id="addDepartmentBtn" prefHeight="32.0" prefWidth="88.0" rippleColor="WHITE" style="-fx-background-color: #76c893; -fx-font-family: Open Sans Bold; -fx-text-fill: #ffffff; -fx-font-weight: bold;" text="Thêm mới" textFill="#fcfafa">
-                <HBox.margin>
-                    <Insets />
-                </HBox.margin>
-                <graphic>
-                    <FontIcon iconColor="WHITE" iconLiteral="fas-plus" />
-                </graphic>
-            </MFXButton>
-        </children>
-    </HBox>
-</GridPane>
+
+
+<BorderPane prefHeight="667.0" prefWidth="1026.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.DepartmentController">
+   <center>
+       <MFXTableView fx:id="table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
+   </center>
+   <top>
+       <HBox alignment="CENTER_RIGHT" prefHeight="43.0" prefWidth="992.0" BorderPane.alignment="CENTER">
+           <children>
+               <MFXButton fx:id="addDepartmentBtn" prefHeight="41.0" prefWidth="105.0" rippleColor="WHITE" style="-fx-background-color: #008001; -fx-font-family: Open Sans Bold; -fx-text-fill: #ffffff; -fx-font-weight: bold;" text="Thêm mới" textFill="#fcfafa">
+                   <HBox.margin>
+                       <Insets />
+                   </HBox.margin>
+                   <graphic>
+                       <FontIcon iconColor="WHITE" iconLiteral="fas-plus" />
+                   </graphic>
+               </MFXButton>
+           </children>
+       </HBox>
+   </top>
+</BorderPane>
