--- a/src/main/resources/fxml/AccessControl.fxml
+++ b/src/main/resources/fxml/AccessControl.fxml
@@ -8,9 +8,9 @@
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
 
-<BorderPane prefHeight="667.0" prefWidth="1026.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="borderPane" prefHeight="667.0" prefWidth="1026.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.AccessControlController">
    <center>
-      <MFXPaginatedTableView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" rowsPerPage="15" />
+      <MFXPaginatedTableView fx:id="paginated" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" rowsPerPage="15" />
    </center>
    <top>
       <HBox alignment="CENTER_RIGHT" BorderPane.alignment="CENTER">
