--- a/src/main/resources/fxml/Deparments.fxml
+++ b/src/main/resources/fxml/Deparments.fxml
@@ -26,7 +26,7 @@
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
 
-<BorderPane prefHeight="667.0" prefWidth="1026.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.DepartmentController">
+<BorderPane fx:id="borderPane"  prefHeight="667.0" prefWidth="1026.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.DepartmentController">
    <center>
        <MFXTableView fx:id="table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
    </center>
