--- a/src/main/resources/fxml/AddDepartment.fxml
+++ b/src/main/resources/fxml/AddDepartment.fxml
@@ -3,38 +3,16 @@
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="332.0" prefWidth="400.0" style="-fx-background-radius: 10; -fx-border-radius: 10; -fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/21.0.5" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.AddDepartmentController">
+<AnchorPane prefHeight="332.0" prefWidth="400.0" styleClass="anchor-background" stylesheets="@../css/Common.css" xmlns="http://javafx.com/javafx/21.0.5" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.AddDepartmentController">
     <children>
-        <Label layoutX="14.0" layoutY="14.0" style="-fx-font-weight: bold; -fx-font-size: 16px;" text="Thêm phòng ban">
-            <font>
-                <Font name="Open Sans Bold" size="16.0" />
-            </font>
-        </Label>
-        <Label layoutX="30.0" layoutY="133.0" text="Tên phòng ban">
-            <font>
-                <Font name="Open Sans Bold" size="13.0" />
-            </font>
-        </Label>
-        <MFXTextField floatMode="DISABLED" layoutX="30.0" layoutY="166.0" prefHeight="38.0" prefWidth="348.0" promptText="Họ và tên" />
-        <MFXButton layoutX="184.0" layoutY="263.0" prefHeight="32.0" prefWidth="76.0" text="Hủy">
-            <effect>
-                <DropShadow>
-                    <color>
-                        <Color red="0.8684210777282715" green="0.8563596606254578" blue="0.8563596606254578" />
-                    </color>
-                </DropShadow>
-            </effect></MFXButton>
-        <MFXButton layoutX="284.0" layoutY="263.0" prefHeight="32.0" prefWidth="76.0" style="-fx-background-color: #0C969C; -fx-text-fill: #ffffff;" text="Lưu" />
-        <Label layoutX="30.0" layoutY="52.0" text="Mã phòng ban">
-            <font>
-                <Font name="Open Sans Bold" size="13.0" />
-            </font>
-        </Label>
-        <MFXTextField floatMode="DISABLED" layoutX="30.0" layoutY="80.0" prefHeight="38.0" prefWidth="339.0" promptText="Mã nhân viên" />
+        <Label layoutX="14.0" layoutY="14.0" styleClass="header-label" text="Thêm phòng ban" />
+        <Label layoutX="30.0" layoutY="133.0" styleClass="sub-header-label" text="Tên phòng ban" />
+        <MFXTextField fx:id="txtDepartmentName" floatMode="DISABLED" layoutX="30.0" layoutY="166.0" prefHeight="38.0" prefWidth="339.0" promptText="Tên phòng ban" />
+        <MFXButton fx:id="cancelBtn" layoutX="183.0" layoutY="279.0" prefHeight="32.0" prefWidth="76.0" styleClass="cancel-button" text="Hủy" />
+        <MFXButton fx:id="saveBtn" layoutX="284.0" layoutY="279.0" prefHeight="32.0" prefWidth="76.0" styleClass="save-button" text="Lưu" />
+        <Label layoutX="30.0" layoutY="52.0" styleClass="sub-header-label" text="Mã phòng ban" />
+        <MFXTextField fx:id="txtDepartmentCode" floatMode="DISABLED" layoutX="30.0" layoutY="80.0" prefHeight="38.0" prefWidth="339.0" promptText="Mã nhân viên" />
     </children>
 </AnchorPane>
