--- a/src/main/resources/fxml/AddGuest.fxml
+++ b/src/main/resources/fxml/AddGuest.fxml
@@ -1,55 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
-<AnchorPane prefHeight="451.0" prefWidth="400.0" style="-fx-background-radius: 10; -fx-border-radius: 10; -fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/21.0.5" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.AddGuestController">
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+
+<AnchorPane prefHeight="451.0" prefWidth="400.0" styleClass="anchor-background" stylesheets="@../css/Common.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.AddGuestController">
     <children>
-        <Label layoutX="14.0" layoutY="14.0" style="-fx-font-weight: bold; -fx-font-size: 16px;" text="Thêm khách">
-            <font>
-                <Font name="Open Sans Bold" size="16.0" />
-            </font>
-        </Label>
-        <Label layoutX="30.0" layoutY="133.0" text="Họ và Tên">
-            <font>
-                <Font name="Open Sans Bold" size="13.0" />
-            </font>
-        </Label>
-        <MFXTextField floatMode="DISABLED" layoutX="30.0" layoutY="166.0" prefHeight="38.0" prefWidth="339.0" promptText="Họ và tên" />
-        <MFXButton layoutX="187.0" layoutY="399.0" prefHeight="32.0" prefWidth="76.0" text="Hủy">
-            <effect>
-                <DropShadow>
-                    <color>
-                        <Color red="0.8684210777282715" green="0.8563596606254578" blue="0.8563596606254578" />
-                    </color>
-                </DropShadow>
-            </effect></MFXButton>
-        <MFXButton layoutX="287.0" layoutY="399.0" prefHeight="32.0" prefWidth="76.0" style="-fx-background-color: #0C969C; -fx-text-fill: #ffffff;" text="Lưu" />
-        <Label layoutX="30.0" layoutY="52.0" text="Mã khách">
-            <font>
-                <Font name="Open Sans Bold" size="13.0" />
-            </font>
-        </Label>
-        <MFXTextField floatMode="DISABLED" layoutX="30.0" layoutY="80.0" prefHeight="38.0" prefWidth="339.0" promptText="Mã khách" />
-        <Label layoutX="31.0" layoutY="212.0" text="Số điện thoại">
-            <font>
-                <Font name="Open Sans Bold" size="13.0" />
-            </font>
-        </Label>
-        <MFXTextField floatMode="DISABLED" layoutX="31.0" layoutY="245.0" prefHeight="38.0" prefWidth="339.0" promptText="Họ và tên" />
-        <Label layoutX="31.0" layoutY="295.0" text="Địa chỉ email">
-            <font>
-                <Font name="Open Sans Bold" size="13.0" />
-            </font>
-        </Label>
-        <MFXTextField floatMode="DISABLED" layoutX="31.0" layoutY="328.0" prefHeight="38.0" prefWidth="339.0" promptText="Họ và tên" />
+        <Label layoutX="14.0" layoutY="14.0" styleClass="header-label" text="Thêm khách" />
+        <Label layoutX="30.0" layoutY="133.0" styleClass="sub-header-label" text="Họ và Tên" />
+        <MFXTextField fx:id="txtCardID" floatMode="DISABLED" layoutX="31.0" layoutY="87.0" prefHeight="38.0" prefWidth="339.0" promptText="CMND/CCCD" />
+        <MFXButton fx:id="cancelBtn" layoutX="187.0" layoutY="399.0" prefHeight="32.0" prefWidth="76.0" styleClass="cancel-button" text="Hủy" />
+        <MFXButton fx:id="saveBtn" layoutX="287.0" layoutY="399.0" prefHeight="32.0" prefWidth="76.0" styleClass="save-button" text="Lưu" />
+        <Label layoutX="30.0" layoutY="52.0" styleClass="sub-header-label" text="CMND/CCCD" />
+        <MFXTextField fx:id="txtGuestName" floatMode="DISABLED" layoutX="31.0" layoutY="162.0" prefHeight="38.0" prefWidth="339.0" promptText="Họ và tên" />
+        <Label layoutX="31.0" layoutY="212.0" styleClass="sub-header-label" text="Số điện thoại" />
+        <MFXTextField fx:id="txtPhoneNumber" floatMode="DISABLED" layoutX="31.0" layoutY="245.0" prefHeight="38.0" prefWidth="339.0" promptText="Số điện thoại" />
+        <Label layoutX="31.0" layoutY="295.0" styleClass="sub-header-label" text="Email" />
+        <MFXTextField fx:id="txtEmail" floatMode="DISABLED" layoutX="31.0" layoutY="328.0" prefHeight="38.0" prefWidth="339.0" promptText="Email" />
     </children>
 </AnchorPane>
