--- a/src/main/resources/css/Common.css
+++ b/src/main/resources/css/Common.css
@@ -81,6 +81,11 @@
 	-fx-font-weight: bold;
 	-fx-font-size: 13px;
 }
+.image-view-custom {
+	-fx-background-color: white;
+	-fx-background-radius: 10;
+	-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0.12, -1.0, 2.0);
+}
 /* Custom Table */
 
 
