--- a/src/main/resources/fxml/EmployeeDetail.fxml
+++ b/src/main/resources/fxml/EmployeeDetail.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
@@ -14,7 +15,7 @@
    <children>
       <AnchorPane layoutX="-1.0" layoutY="-2.0" prefHeight="506.0" prefWidth="239.0">
          <children>
-            <ImageView fitHeight="164.0" fitWidth="200.0" layoutX="40.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgProfile" fitHeight="164.0" fitWidth="200.0" layoutX="40.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../assets/profile_default.png" />
                </image>
@@ -22,19 +23,15 @@
             <Label layoutX="91.0" layoutY="192.0" prefHeight="20.0" prefWidth="62.0" styleClass="sub-header-label" text="Họ và tên" />
             <Label layoutX="92.0" layoutY="218.0" prefHeight="20.0" prefWidth="60.0" styleClass="sub-header-label" text="Chức vụ" textAlignment="CENTER" />
             <Label layoutX="23.0" layoutY="280.0" prefHeight="20.0" prefWidth="60.0" styleClass="sub-header-label" text="Mã QR" />
-            <ImageView fitHeight="180.0" fitWidth="180.0" layoutX="32.0" layoutY="312.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../assets/qrcode_default.jpg" />
-               </image>
-            </ImageView>
             <Line endX="1.0" endY="488.0" layoutX="239.0" layoutY="13.0" startX="3.0" startY="-13.0" stroke="#dddddd" />
+            <StackPane fx:id="imgQrCode" layoutX="32.0" layoutY="300.0" prefHeight="180.0" prefWidth="180.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="238.0" layoutY="-2.0" prefHeight="500.0" prefWidth="561.0">
          <children>
             <Label layoutX="14.0" layoutY="14.0" styleClass="header-label" text="Thông tin cá nhân" />
             <Label layoutX="27.0" layoutY="68.0" styleClass="sub-header-label" text="Mã nhân viên" />
-            <MFXTextField disable="true" floatMode="DISABLED" layoutX="124.0" layoutY="64.0" prefHeight="29.0" prefWidth="404.0" />
+            <MFXTextField fx:id="txtEmpCode" disable="true" floatMode="DISABLED" layoutX="124.0" layoutY="64.0" prefHeight="30.0" prefWidth="164.0" />
             <Label layoutX="31.0" layoutY="120.0" styleClass="sub-header-label" text="Họ và tên" />
             <MFXTextField disable="true" floatMode="DISABLED" layoutX="127.0" layoutY="116.0" prefHeight="29.0" prefWidth="404.0" />
             <Label layoutX="29.0" layoutY="168.0" styleClass="sub-header-label" text="Ngày sinh" />
@@ -51,8 +48,8 @@
             <MFXTextField disable="true" floatMode="DISABLED" layoutX="338.0" layoutY="270.0" prefHeight="29.0" prefWidth="197.0" />
             <Label layoutX="28.0" layoutY="328.0" styleClass="sub-header-label" text="Địa chỉ" />
             <MFXTextField disable="true" floatMode="DISABLED" layoutX="129.0" layoutY="324.0" prefHeight="29.0" prefWidth="404.0" />
-            <Label layoutX="27.0" layoutY="370.0" styleClass="sub-header-label" text="Phòng ban" />
-            <MFXTextField disable="true" floatMode="DISABLED" layoutX="128.0" layoutY="366.0" prefHeight="29.0" prefWidth="132.0" />
+            <Label layoutX="312.0" layoutY="66.0" styleClass="sub-header-label" text="Phòng ban" />
+            <MFXTextField disable="true" floatMode="DISABLED" layoutX="413.0" layoutY="62.0" prefHeight="29.0" prefWidth="132.0" />
             <Label layoutX="287.0" layoutY="370.0" styleClass="sub-header-label" text="Chức vụ" />
             <MFXTextField disable="true" floatMode="DISABLED" layoutX="382.0" layoutY="366.0" prefHeight="29.0" prefWidth="153.0" />
             <MFXButton layoutX="253.0" layoutY="451.0" prefHeight="35.0" prefWidth="78.0" styleClass="cancel-button" text="Đóng">
