--- a/src/main/resources/fxml/AddGuest.fxml
+++ b/src/main/resources/fxml/AddGuest.fxml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import io.github.palexdev.materialfx.controls.MFXRadioButton?>
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="451.0" prefWidth="400.0" styleClass="anchor-background" stylesheets="@../css/Common.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.AddGuestController">
+<AnchorPane prefHeight="514.0" prefWidth="400.0" styleClass="anchor-background" stylesheets="@../css/Common.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.AddGuestController">
     <children>
         <Label layoutX="14.0" layoutY="14.0" styleClass="header-label" text="Thêm khách" />
         <Label layoutX="30.0" layoutY="133.0" styleClass="sub-header-label" text="Họ và Tên" />
         <MFXTextField fx:id="txtCardID" floatMode="DISABLED" layoutX="31.0" layoutY="87.0" prefHeight="38.0" prefWidth="339.0" promptText="CMND/CCCD" />
-        <MFXButton fx:id="cancelBtn" layoutX="187.0" layoutY="399.0" prefHeight="32.0" prefWidth="76.0" styleClass="cancel-button" text="Hủy" />
-        <MFXButton fx:id="saveBtn" layoutX="287.0" layoutY="399.0" prefHeight="32.0" prefWidth="76.0" styleClass="save-button" text="Lưu" />
+        <MFXButton fx:id="cancelBtn" layoutX="187.0" layoutY="461.0" prefHeight="32.0" prefWidth="76.0" styleClass="cancel-button" text="Hủy" />
+        <MFXButton fx:id="saveBtn" layoutX="287.0" layoutY="461.0" prefHeight="32.0" prefWidth="76.0" styleClass="save-button" text="Lưu" />
         <Label layoutX="30.0" layoutY="52.0" styleClass="sub-header-label" text="CMND/CCCD" />
         <MFXTextField fx:id="txtGuestName" floatMode="DISABLED" layoutX="31.0" layoutY="162.0" prefHeight="38.0" prefWidth="339.0" promptText="Họ và tên" />
-        <Label layoutX="31.0" layoutY="212.0" styleClass="sub-header-label" text="Số điện thoại" />
-        <MFXTextField fx:id="txtPhoneNumber" floatMode="DISABLED" layoutX="31.0" layoutY="245.0" prefHeight="38.0" prefWidth="339.0" promptText="Số điện thoại" />
-        <Label layoutX="31.0" layoutY="295.0" styleClass="sub-header-label" text="Email" />
-        <MFXTextField fx:id="txtEmail" floatMode="DISABLED" layoutX="31.0" layoutY="328.0" prefHeight="38.0" prefWidth="339.0" promptText="Email" />
+        <Label layoutX="31.0" layoutY="266.0" styleClass="sub-header-label" text="Số điện thoại" />
+        <MFXTextField fx:id="txtPhoneNumber" floatMode="DISABLED" layoutX="31.0" layoutY="299.0" prefHeight="38.0" prefWidth="339.0" promptText="Số điện thoại" />
+        <Label layoutX="31.0" layoutY="349.0" styleClass="sub-header-label" text="Email" />
+        <MFXTextField fx:id="txtEmail" floatMode="DISABLED" layoutX="31.0" layoutY="382.0" prefHeight="38.0" prefWidth="339.0" promptText="Email" />
+      <Label layoutX="36.0" layoutY="213.0" styleClass="sub-header-label" text="Giới tính" />
+      <MFXRadioButton fx:id="txtMale" layoutX="105.0" layoutY="248.0" text="Nam" />
+      <MFXRadioButton fx:id="txtFemale" layoutX="265.0" layoutY="248.0" text="Nữ" />
     </children>
 </AnchorPane>
