--- a/src/main/resources/fxml/EmployeeDetail.fxml
+++ b/src/main/resources/fxml/EmployeeDetail.fxml
@@ -3,6 +3,7 @@
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import io.github.palexdev.mfxcore.controls.Label?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,48 +12,58 @@
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" stylesheets="@../css/Common.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.EmployeeDetailController">
+<AnchorPane fx:id="anchorContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" styleClass="text-field-custom" stylesheets="@../css/Common.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bachnh.accesscontrolsystem.controller.EmployeeDetailController">
    <children>
       <AnchorPane layoutX="-1.0" layoutY="-2.0" prefHeight="506.0" prefWidth="239.0">
          <children>
-            <ImageView fx:id="imgProfile" fitHeight="164.0" fitWidth="200.0" layoutX="40.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../assets/profile_default.png" />
-               </image>
-            </ImageView>
-            <Label layoutX="91.0" layoutY="192.0" prefHeight="20.0" prefWidth="62.0" styleClass="sub-header-label" text="Họ và tên" />
-            <Label layoutX="92.0" layoutY="218.0" prefHeight="20.0" prefWidth="60.0" styleClass="sub-header-label" text="Chức vụ" textAlignment="CENTER" />
+            <StackPane fx:id="imgProfile" layoutX="40.0" layoutY="28.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0">
+               <children>
+                  <ImageView fitHeight="160.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/profile_default.png" />
+                     </image>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
+                  </ImageView>
+               </children>
+            </StackPane>
             <Label layoutX="23.0" layoutY="280.0" prefHeight="20.0" prefWidth="60.0" styleClass="sub-header-label" text="Mã QR" />
             <Line endX="1.0" endY="488.0" layoutX="239.0" layoutY="13.0" startX="3.0" startY="-13.0" stroke="#dddddd" />
-            <StackPane fx:id="imgQrCode" layoutX="32.0" layoutY="300.0" prefHeight="180.0" prefWidth="180.0" />
+            <StackPane fx:id="imgQrCode" layoutX="32.0" layoutY="300.0" prefHeight="180.0" prefWidth="180.0">
+               <children>
+                  <ImageView fitHeight="180.0" fitWidth="180.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/qrcode_default.jpg" />
+                     </image>
+                  </ImageView>
+               </children></StackPane>
          </children>
       </AnchorPane>
       <AnchorPane layoutX="238.0" layoutY="-2.0" prefHeight="500.0" prefWidth="561.0">
          <children>
             <Label layoutX="14.0" layoutY="14.0" styleClass="header-label" text="Thông tin cá nhân" />
             <Label layoutX="27.0" layoutY="68.0" styleClass="sub-header-label" text="Mã nhân viên" />
-            <MFXTextField fx:id="txtEmpCode" disable="true" floatMode="DISABLED" layoutX="124.0" layoutY="64.0" prefHeight="30.0" prefWidth="164.0" />
-            <Label layoutX="31.0" layoutY="120.0" styleClass="sub-header-label" text="Họ và tên" />
-            <MFXTextField disable="true" floatMode="DISABLED" layoutX="127.0" layoutY="116.0" prefHeight="29.0" prefWidth="404.0" />
+            <MFXTextField fx:id="txtEmpCode" disable="true" floatMode="DISABLED" layoutX="124.0" layoutY="64.0" prefHeight="30.0" prefWidth="143.0" />
+            <Label layoutX="31.0" layoutY="120.0" styleClass="sub-header-label" text="Phòng ban" />
+            <MFXTextField fx:id="txtDpmName" disable="true" floatMode="DISABLED" layoutX="127.0" layoutY="116.0" prefHeight="30.0" prefWidth="167.0" />
             <Label layoutX="29.0" layoutY="168.0" styleClass="sub-header-label" text="Ngày sinh" />
-            <MFXTextField disable="true" floatMode="DISABLED" layoutX="130.0" layoutY="164.0" prefHeight="29.0" prefWidth="132.0" />
+            <MFXTextField fx:id="txtBirthday" disable="true" floatMode="DISABLED" layoutX="130.0" layoutY="164.0" prefHeight="29.0" prefWidth="132.0" />
             <Label layoutX="27.0" layoutY="218.0" styleClass="sub-header-label" text="CCCD/CMND" />
-            <MFXTextField disable="true" floatMode="DISABLED" layoutX="128.0" layoutY="214.0" prefHeight="29.0" prefWidth="164.0" />
-            <Label layoutX="305.0" layoutY="218.0" styleClass="sub-header-label" text="Quốc tịch" />
-            <MFXTextField disable="true" floatMode="DISABLED" layoutX="392.0" layoutY="214.0" prefHeight="29.0" prefWidth="143.0" />
+            <MFXTextField fx:id="txtCardID" disable="true" floatMode="DISABLED" layoutX="127.0" layoutY="214.0" prefHeight="30.0" prefWidth="154.0" />
             <Label layoutX="306.0" layoutY="169.0" styleClass="sub-header-label" text="Giới tính" />
-            <MFXTextField disable="true" floatMode="DISABLED" layoutX="390.0" layoutY="164.0" prefHeight="29.0" prefWidth="143.0" />
-            <Label layoutX="27.0" layoutY="274.0" styleClass="sub-header-label" text="Số điện thoại" />
-            <MFXTextField disable="true" floatMode="DISABLED" layoutX="131.0" layoutY="270.0" prefHeight="29.0" prefWidth="143.0" />
-            <Label layoutX="287.0" layoutY="274.0" styleClass="sub-header-label" text="Email" />
-            <MFXTextField disable="true" floatMode="DISABLED" layoutX="338.0" layoutY="270.0" prefHeight="29.0" prefWidth="197.0" />
+            <MFXTextField fx:id="txtGender" disable="true" floatMode="DISABLED" layoutX="385.0" layoutY="164.0" prefHeight="30.0" prefWidth="154.0" />
+            <Label layoutX="292.0" layoutY="218.0" styleClass="sub-header-label" text="Số điện thoại" />
+            <MFXTextField fx:id="txtPhoneNumber" disable="true" floatMode="DISABLED" layoutX="396.0" layoutY="214.0" prefHeight="29.0" prefWidth="143.0" />
+            <Label layoutX="32.0" layoutY="275.0" styleClass="sub-header-label" text="Email" />
+            <MFXTextField fx:id="txtEmail" disable="true" floatMode="DISABLED" layoutX="132.0" layoutY="270.0" prefHeight="30.0" prefWidth="404.0" />
             <Label layoutX="28.0" layoutY="328.0" styleClass="sub-header-label" text="Địa chỉ" />
-            <MFXTextField disable="true" floatMode="DISABLED" layoutX="129.0" layoutY="324.0" prefHeight="29.0" prefWidth="404.0" />
-            <Label layoutX="312.0" layoutY="66.0" styleClass="sub-header-label" text="Phòng ban" />
-            <MFXTextField disable="true" floatMode="DISABLED" layoutX="413.0" layoutY="62.0" prefHeight="29.0" prefWidth="132.0" />
-            <Label layoutX="287.0" layoutY="370.0" styleClass="sub-header-label" text="Chức vụ" />
-            <MFXTextField disable="true" floatMode="DISABLED" layoutX="382.0" layoutY="366.0" prefHeight="29.0" prefWidth="153.0" />
-            <MFXButton layoutX="253.0" layoutY="451.0" prefHeight="35.0" prefWidth="78.0" styleClass="cancel-button" text="Đóng">
+            <MFXTextField fx:id="txtAddress" disable="true" floatMode="DISABLED" layoutX="129.0" layoutY="324.0" prefHeight="29.0" prefWidth="404.0" />
+            <Label layoutX="291.0" layoutY="67.0" styleClass="sub-header-label" text="Họ và tên" />
+            <MFXTextField fx:id="txtEmpName" disable="true" floatMode="DISABLED" layoutX="360.0" layoutY="63.0" prefHeight="30.0" prefWidth="180.0" />
+            <Label layoutX="309.0" layoutY="120.0" styleClass="sub-header-label" text="Chức vụ" />
+            <MFXTextField fx:id="txtRoleName" disable="true" floatMode="DISABLED" layoutX="386.0" layoutY="115.0" prefHeight="29.0" prefWidth="153.0" />
+            <MFXButton fx:id="closeBtn" layoutX="253.0" layoutY="451.0" prefHeight="35.0" prefWidth="78.0" styleClass="cancel-button" text="Đóng">
                <graphic>
                   <FontIcon iconLiteral="fas-reply" />
                </graphic>
